--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learn-webpack",
   "version": "1.0.0",
-  "description": "",
+  "description": "learn-webpack",
   "main": "",
   "dependencies": {},
   "devDependencies": {
@@ -12,6 +12,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Douglas Chen (cdswyda@hotmail.com)",
   "license": "MIT"
 }
